tests/bad/bad022.lat
// Assigning string to int variable.

int main () {
 int x = "";
 return 0 ;
}